# cell_estimator

./: CMakeLists.txt  cell10.bag  cell9.bag  package.xml
bags/: 2019-12-13-14-50-00.bag  base2.bag  cell1.bag  cell2.bag  cell4.bag  rover10.bag  rover2.bag  rover3.bag  rover7.bag  rover8.bag  rover9.bag  rover_project4.bag
bags_csv/: aug1_utc_base1.bag_base_PosVelEcef.csv  aug1_utc_base1.bag_base_SurveyStatus.csv  aug1_utc_base1.bag_rosout.csv  aug1_utc_base1_base_PosVelTime.csv  aug1_utc_base1_rosout_agg.csv  aug1_utc_walk_01.bag_attitude_euler.csv  aug1_utc_walk_01.bag_rc_raw.csv  aug1_utc_walk_01.bag_rosout.csv  aug1_utc_walk_01.bag_rosout_agg.csv  aug1_utc_walk_01.bag_rover_PosVelTime.csv  aug1_utc_walk_01.bag_rover_RelPos.csv  aug1_utc_walk_01.bag_status.csv  aug1_utc_walk_01_attitude.csv  aug1_utc_walk_01_imu_temperature.csv  aug1_utc_walk_01_output_raw.csv  aug1_utc_walk_01_rover_PosVelEcef.csv  aug1_utc_walk_01_unsaved_params.csv  aug1_utc_walk_01_version.csv  base.bag  base.bag_base_PosVelTime.csv  base.bag_base_SurveyStatus.csv  base.bag_rosout_agg.csv  base2.bag_base_PosVelTime.csv  base2.bag_rosout.csv  base2_base_SurveyStatus.csv  base_rosout.csv  cell1.bag_imu.csv  cell1_lla.csv  cell1_rosout.csv  cell1_rosout_agg.csv  cell2.bag_imu.csv  cell2.bag_rosout.csv  cell2_lla.csv  cell2_rosout_agg.csv  cell3.bag  cell3.bag_lla.csv  cell3_imu.csv  cell3_rosout.csv  cell3_rosout_agg.csv  cell4.bag_imu.csv  (+46 more)
cell_estimator/estimator/: estimator_ros.py
launch/: cell.launch  cell_realTime.launch
msg/: PositionVelocityTime.msg  RelPos.msg  imu.msg
(+19 files in other folders)
