<package format="3">
  
  <name>cell_estimator</name>
  <version>0.0.0</version>
  <description>cell phone localization package</description>

  <maintainer email="matthewk.rydalch@gmail.com">Matthew Rydalch</maintainer>
  
  <license>TODO</license>

  <author email="michael.eyler@byu.edu">Michael Eyler</author>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>

  <depend>std_msgs</depend> 
  <depend>geometry_msgs</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>

